[backend] AtomicTestingUtils